src/snapshots/ruff__linter__tests__F403_F403.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| from F634 import *
|> `from F634 import *` used; unable to detect undefined names
| from F634 import *  # noqa: E501
|> `from F634 import *` used; unable to detect undefined names
  
  from F634 import *  # noqa
  from F634 import *  # noqa: F403
  from F634 import *  # noqa: F403, E501

