src/snapshots/ruff__linter__tests__F404_F404.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: LateFutureImport
  location:
    row: 6
    column: 1
  end_location:
    row: 6
    column: 38
  fix: ~

