src/snapshots/ruff__linter__tests__F405_F405.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ImportStarUsage:
      - name
      - - mymodule
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 14
  fix: ~
- kind:
    ImportStarUsage:
      - a
      - - mymodule
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 7
  fix: ~

