src/snapshots/ruff__linter__tests__F406_F406.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ImportStarNotPermitted: F634
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 22
  fix: ~
- kind:
    ImportStarNotPermitted: F634
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 22
  fix: ~

