src/snapshots/ruff__linter__tests__F501_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    PercentFormatInvalidFormat: incomplete format
  location:
    row: 1
    column: 9
  end_location:
    row: 1
    column: 25
  fix: ~

