src/snapshots/ruff__linter__tests__F502_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PercentFormatExpectedMapping
  location:
    row: 9
    column: 10
  end_location:
    row: 9
    column: 21
  fix: ~

